PORTAL-246 - Add compile/build.xml ant task to run REST API functional tests.
Change-Id: I358a3d33e1b07d63cb677f65f692af61f7054cb9